src/test/fail/wrong_arg_type.ly
###
SyntaxError: f arg #0 expects type 'integer' but got type 'string'.
Where: File "test/fail/wrong_arg_type.ly" at line 6
###

function f(integer a) {} f("a")
